--- a/styles2.css
+++ b/styles2.css
@@ -41,7 +41,11 @@ header nav ul {
 }
 
 header nav ul li a {
-    color: #fff;
+    color: #FFFEEC;
+}
+
+#acerca-de-title{
+    text-align: center;
 }
 
 p {
@@ -49,6 +53,7 @@ p {
     font-weight: 300;
     font-style: normal;
     font-size: 1.1em;
+    text-align: center;
 }
 
 .seccion-1 img {
@@ -56,7 +61,7 @@ p {
 }
 
 header a i {
-    color: #fff;
+    color: #FFFEEC;
     font-size: 3em;
 }
 
@@ -86,7 +91,7 @@ header a i {
 
 @media (max-width: 768px) {
     header {
-        background-color: #000;
+        background-color: #6F233F;
     }
 
     .checkbtn {
@@ -97,11 +102,11 @@ header a i {
         position: fixed;
         width: 100%;
         height: 100vh;
-        background-color: #2c3e50;
+        background-color: #A0445D;
         text-align: center;
-        top: 80px;
-        left: 100%;
-        transition: all 0.5s;
+        top: 70px;
+        left:100%;
+        transition: all 1s;
     }
 
     #check:checked ~ ul {
@@ -117,12 +122,12 @@ header a i {
     
     
     #encabezado nav ul li a {
-        font-size: 20px;
+        font-size: 20PX;
     }
     
     
     #check:checked ~ .checkbtn {
-        color: aqua;
+        color: #F4DADB;
     }
 
     .menu {
@@ -145,16 +150,16 @@ header a i {
     }
 
     #encabezado nav ul li a {
-        font-size: 20px;
+        font-size: 15px;
         text-transform: uppercase;
         transition: all 1s ease;
     }
     
     #encabezado nav ul li a:hover {
         text-decoration: underline;
-        color: #df823f;
+        color: #FFBE98;
         font-weight: bold;
-        font-size: 40px;
+        font-size: 25px;
     }
 }
 
@@ -165,7 +170,7 @@ header a i {
 }
 
 .seccion-1 {
-    background-color: #eee;
+    background-color: #FAF3E1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -184,25 +189,27 @@ header a i {
 
 footer {
     clear: both;
-    background-color: #24012e;
+    background-color: #610027;
     width: 100%;
     color: #fff;
 }
 
 #redes-sociales {
     justify-content: center;
-    text-align: center;
+    text-align: left;
+    font-size: 10px;
 }
 
 #footer {
-    padding: 1em;
+    padding: 2em;
 }
 
 #footer ul {
     display: flex;
-    flex-direction: column;
-    gap: 1em;
+    flex-direction: inherit;
+    gap: 2em;
     align-items: center;
+    font-size: 20px;
 }
 
 #footer nav ul {
@@ -224,18 +231,18 @@ footer {
     right: 39px;
     font-weight: 900;
     font-size: 30px;
-    color: #b59a61;
+    color: #D62828;
 }
 
 #fixed:hover {
-    color: #f2ff00;
+    color: #FFBE98;
 }
 
 .title-section {
     display: block;
-    color: #b59a61;
-    font-size: 2em;
-    margin-top: 0;
+    color: #FFFEEC;
+    font-size: 1.5em;
+    margin-top: 1em;
     margin-bottom: 1em;
     font-weight: bold;
 }
@@ -311,9 +318,9 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     gap: 2em;
-    background-color: #f6f7f8;
-    border: 2px solid #d6d9dc;
-    border-radius: 16px;
+    background-color: #FAF3E1;
+    border: 2px solid #ffbdd6;
+    border-radius: 20px;
 
     width: 50%;
     padding: 2.5em;
